--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,6 @@ im = "15.1.0"
 serde = { version = "1.0.152", features=["derive"] }
 serde_json = "1.0.91"
 directories = "4.0.1"
+screenshots = "0.8.2" 
+duration-string = "0.3.0"
+chrono = "0.4"
