--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,4 @@ directories = "4.0.1"
 screenshots = "0.8.2" 
 duration-string = "0.3.0"
 chrono = "0.4"
+druid-widget-nursery = { git = "https://github.com/linebender/druid-widget-nursery" }
