--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,3 +16,4 @@ duration-string = "0.3.0"
 chrono = "0.4"
 druid-widget-nursery = { git = "https://github.com/linebender/druid-widget-nursery" }
 druid-shell = "0.8.3"
+image = "0.24.7"
