--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-druid = { version = "0.8.2", features = ["im"] }
+druid = { version = "0.8.2", features = ["im", "svg"]}
 im = "15.1.0"
 serde = { version = "1.0.152", features=["derive"] }
 serde_json = "1.0.91"
