--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,3 +19,6 @@ druid-shell = "0.8.3"
 image = "0.24.7"
 piet = "0.6.2"
 piet-common = { version = "0.6.2", features = ["png"] }
+scrap = "0.5.0"
+native-dialog = "0.6.4"
+uuid = {version = "1.4.1", features = ["serde", "v4"]}
