--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,3 +23,4 @@ scrap = "0.5.0"
 native-dialog = "0.6.4"
 uuid = {version = "1.4.1", features = ["serde", "v4"]}
 winit = "0.28.5"
+tokio = { version = "1", features = ["full"] }
