--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,3 +24,6 @@ native-dialog = "0.6.4"
 uuid = {version = "1.4.1", features = ["serde", "v4"]}
 winit = "0.28.5"
 tokio = { version = "1", features = ["full"] }
+raster = "0.2.0"
+kurbo = "0.9.4"
+nalgebra = "0.32.2"
