--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,6 +28,7 @@ bincode = "1.3.3"
 rusttype = "0.9.3"
 crossbeam = "0.8.2"
 livesplit-hotkey = "0.7.0"
+livesplit-core = "0.13.0"
 
 # [profile.dev]
 # overflow-checks = false
