--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,23 +8,21 @@ edition = "2021"
 [dependencies]
 druid = { version = "0.8.3", features = ["im", "svg", "image", "png"]}
 im = "15.1.0"
-serde = { version = "1.0.152", features=["derive"] }
-serde_json = "1.0.91"
-directories = "4.0.1"
+# serde = { version = "1.0.152", features=["derive"] }
+# serde_json = "1.0.91"
+# directories = "4.0.1"
 screenshots = "0.8.2" 
-duration-string = "0.3.0"
+# duration-string = "0.3.0"
 chrono = "0.4"
 druid-widget-nursery = { git = "https://github.com/linebender/druid-widget-nursery" }
 druid-shell = "0.8.3"
 image = "0.24.7"
 piet = "0.6.2"
 piet-common = { version = "0.6.1", features = ["png"] }
-scrap = "0.5.0"
-uuid = {version = "1.4.1", features = ["serde", "v4"]}
-kurbo = "0.10.2"
+# uuid = {version = "1.4.1", features = ["serde", "v4"]}
+# kurbo = "0.10.2"
 arboard = "3.2.1"
 imageproc = "0.23.0"
-bincode = "1.3.3"
 rusttype = "0.9.3"
 crossbeam = "0.8.2"
 livesplit-hotkey = "0.7.0"
